--- a/agentapp/templates/index/index.html
+++ b/agentapp/templates/index/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="border-radius-xl mt-3 mx-3 position-relative" style="background-image: url('/static/img/vr-bg.jpg') ; background-size: cover;">
+<div class="border-radius-xl mt-3 mx-3 position-relative" style="background-image: url('/static/img/bcl/index_bg.jpg') ; background-size: cover;">
     <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 " id="sidenav-main">
       <div class="sidenav-header">
         <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
@@ -58,7 +58,7 @@
             <div class="docs-info">
               <h6 class="text-white up mb-0">Need network support?</h6>
               <p class="text-xs font-weight-bold">Baugh Consulting can help</p>
-              <a href="https://www.creative-tim.com/learning-lab/bootstrap/license/soft-ui-dashboard" target="_blank" class="btn btn-white btn-sm w-100 mb-0">Get IT Support</a>
+              <a target="_blank" class="btn btn-white btn-sm w-100 mb-0">Get IT Support</a>
             </div>
           </div>
         </div>
@@ -70,18 +70,7 @@
         <div class="container">
           <div class="row pt-10">
             <div class="col-lg-1 col-md-1 pt-5 pt-lg-0 ms-lg-5 text-center">
-              <a href="javascript:;" class="avatar avatar-md border-0" data-bs-toggle="tooltip" data-bs-placement="left" title="My Profile">
-                <img class="border-radius-lg" alt="Image placeholder" src="../assets/img/team-1.jpg">
-              </a>
-              <button class="btn btn-white border-radius-lg p-2 mt-2" type="button" data-bs-toggle="tooltip" data-bs-placement="left" title="Home">
-                <i class="fas fa-home p-2"></i>
-              </button>
-              <button class="btn btn-white border-radius-lg p-2" type="button" data-bs-toggle="tooltip" data-bs-placement="left" title="Search">
-                <i class="fas fa-search p-2"></i>
-              </button>
-              <button class="btn btn-white border-radius-lg p-2" type="button" data-bs-toggle="tooltip" data-bs-placement="left" title="Minimize">
-                <i class="fas fa-ellipsis-h p-2"></i>
-              </button>
+              
             </div>
             <div class="col-lg-8 col-md-11">
               <div class="d-flex">
