registration, secure api key delivery test

--- a/agentapp/templates/app/base.html
+++ b/agentapp/templates/app/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='img/bcl/favicon-192.png') }}" />
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='img/bcl/umjiniti.png') }}" />
     <title>
       {% block title %} {% endblock %}
     </title>
@@ -122,7 +122,7 @@
     <div class="sidenav-header">
       <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
       <a class="navbar-brand m-0" href="{{ url_for('dashboard', cmp_id=cmp_id, obsc=obsc_key) }}">
-        <img src="{{ url_for('static', filename='img/bcl/Logo-Animated.svg') }}" class="navbar-brand-img h-100" alt="Consulting services logo"/>
+        <img src="{{ url_for('static', filename='img/bcl/umjiniti.png') }}" class="navbar-brand-img h-100" alt="Consulting services logo"/>
 
         <span class="ms-1 font-weight-bold text-white">umjiniti</span>
       </a>
