--- a/agentapp/templates/index/register.html
+++ b/agentapp/templates/index/register.html
@@ -26,6 +26,26 @@
               {{ form.hidden_tag() }}
               <!--{{ form.csrf_token }}-->
               <div class="form-floating mb-3">
+                  <label>Registration Key</label>
+                  {{ form.reg_key(class="form-control") }}    
+              </div>
+
+              <div class="form-floating mb-3">
+                  <label>Email</label>
+                  {{ form.email(class="form-control") }}    
+              </div>
+
+              <div class="form-floating mb-3">
+                  <label>First Name</label>
+                  {{ form.fname(class="form-control") }}    
+              </div>
+
+              <div class="form-floating mb-3">
+                  <label>Last Name</label>
+                  {{ form.lname(class="form-control") }}    
+              </div>
+
+              <div class="form-floating mb-3">
                   <label>Username</label>
                   {{ form.uname(class="form-control") }}    
               </div>
