--- a/agentapp/templates/index/index.html
+++ b/agentapp/templates/index/index.html
@@ -4,14 +4,6 @@
 
 <div class="border-radius-xl mt-3 mx-3 position-relative" style="background-image: url('/static/img/bcl/index_bg.jpg') ; background-size: cover;">
     <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 " id="sidenav-main">
-      <div class="sidenav-header">
-        <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
-        <a class="navbar-brand m-0" href="{{ url_for('index') }}">
-          <img src="{{ url_for('static', filename='img/bcl/Logo-Animated.svg') }}"  class="navbar-brand-img h-100" height="80" width="100" alt="Consulting services logo"/>
-          <span class="ms-1 font-weight-bold">umjiniti NMS</span>
-        </a>
-      </div>
-      <hr class="horizontal dark mt-0">
       <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -50,14 +42,14 @@
       </div>
       <div class="sidenav-footer mx-3 ">
         <div class="card card-background shadow-none card-background-mask-secondary" id="sidenavCard">
-          <div class="full-background" style="background-image: url('../assets/img/curved-images/white-curved.jpg')"></div>
+          <div class="full-background" style="background-image: url('/static/img/curved-images/white-curved.jpg')"></div>
           <div class="card-body text-start p-3 w-100">
             <div class="icon icon-shape icon-sm bg-white shadow text-center mb-3 d-flex align-items-center justify-content-center border-radius-md">
               <i class="ni ni-diamond text-dark text-gradient text-lg top-0" aria-hidden="true" id="sidenavCardIcon"></i>
             </div>
             <div class="docs-info">
               <h6 class="text-white up mb-0">Need network support?</h6>
-              <p class="text-xs font-weight-bold">Baugh Consulting can help</p>
+              <p class="text-xs font-weight-bold">Baugh Consulting & Lab L.L.C. can help</p>
               <a target="_blank" class="btn btn-white btn-sm w-100 mb-0">Get IT Support</a>
             </div>
           </div>
