--- a/agentapp/templates/index/index.html
+++ b/agentapp/templates/index/index.html
@@ -45,7 +45,7 @@
           <div class="full-background" style="background-image: url('/static/img/curved-images/white-curved.jpg')"></div>
           <div class="card-body text-start p-3 w-100">
             <div class="icon icon-shape icon-sm bg-white shadow text-center mb-3 d-flex align-items-center justify-content-center border-radius-md">
-              <i class="ni ni-diamond text-dark text-gradient text-lg top-0" aria-hidden="true" id="sidenavCardIcon"></i>
+              <img src="{{ url_for('static', filename='img/bcl/umjiniti.png') }}" class="navbar-brand-img h-100" alt="Consulting services logo"/>
             </div>
             <div class="docs-info">
               <h6 class="text-white up mb-0">Need network support?</h6>
@@ -79,17 +79,27 @@
                   <div class="card move-on-hover overflow-hidden">
                     <div class="card-body">
                       <div class="d-flex">
-                        <h6 class="mb-0 me-3">08:00</h6>
-                        <h6 class="mb-0">Synk up with Mark
-                          <small class="text-secondary font-weight-normal">Hangouts</small>
-                        </h6>
+                        <a class="mb-0 me-3" href="{{ url_for('register') }}">
+                          <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
+                              <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
+                              <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5"/>
+                            </svg>
+                          </div>
+                        </a>
+                        <span class="mb-0">Register</span>
                       </div>
                       <hr class="horizontal dark">
                       <div class="d-flex">
-                        <h6 class="mb-0 me-3">09:30</h6>
-                        <h6 class="mb-0">Gym <br />
-                          <small class="text-secondary font-weight-normal">World Class</small>
-                        </h6>
+                        <a class="mb-0 me-3" href="{{ url_for('login') }}">
+                          <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
+                              <path fill-rule="evenodd" d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0z"/>
+                              <path fill-rule="evenodd" d="M11.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H1.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z"/>
+                            </svg>
+                          </div>
+                        </a>
+                        <span class="mb-0">Login</span>
                       </div>
                       <hr class="horizontal dark">
                       <div class="d-flex">
