--- a/agentapp/templates/app/base.html
+++ b/agentapp/templates/app/base.html
@@ -123,7 +123,6 @@
       <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
       <a class="navbar-brand m-0" href="{{ url_for('dashboard', cmp_id=cmp_id, obsc=obsc_key) }}">
         <img src="{{ url_for('static', filename='img/bcl/umjiniti.png') }}" class="navbar-brand-img h-100" alt="Consulting services logo"/>
-
         <span class="ms-1 font-weight-bold text-white">umjiniti</span>
       </a>
     </div>
@@ -266,14 +265,14 @@
     </div>
     <div class="sidenav-footer mx-3 ">
       <div class="card card-background shadow-none card-background-mask-secondary" id="sidenavCard">
-        <div class="full-background" style="background-image: url('../assets/img/curved-images/white-curved.jpg')"></div>
+        <div class="full-background" style="background-image: url('/static/img/curved-images/white-curved.jpg')"></div>
         <div class="card-body text-start p-3 w-100">
           <div class="icon icon-shape icon-sm bg-white shadow text-center mb-3 d-flex align-items-center justify-content-center border-radius-md">
             <i class="ni ni-diamond text-dark text-gradient text-lg top-0" aria-hidden="true" id="sidenavCardIcon"></i>
           </div>
           <div class="docs-info">
-            <h6 class="text-dark up mb-0">Site Selection</h6>
-            <p class="text-xs font-weight-bold">Choose a site to view network data</p>
+            <h6 class="text-dark up mb-0">Currently Logged In As: </h6>
+            <p class="text-xs font-weight-bold">{{ data.get('fname') }} {{ data.get('lname') }}</p>
           </div>
         </div>
       </div>
