--- a/agentapp/templates/app/probes.html
+++ b/agentapp/templates/app/probes.html
@@ -129,7 +129,7 @@ document.addEventListener("DOMContentLoaded", () => {
         if (probeDeleteConfirmation) {
           const payload = { id: rowData.id };
           //const resp = await fetch(endpoint, {method: "POST", headers: {"Content-Type": "application/json", "X-ACCESS-TOKEN": "{{ jwt_token }}"}, body: JSON.stringify(payload)});
-          const resp = await fetch(endpoint, {method: "POST", credentials:"same-origin", body: payload});
+          const resp = await fetch(endpoint, {method: "POST", credentials:"same-origin", headers: {"Content-Type": "application/json"}, body: JSON.stringify(payload)});
           if (resp.ok) {
             alert("Probe deletion successful");
           } else {
