--- a/agentapp/templates/index/index.html
+++ b/agentapp/templates/index/index.html
@@ -13,8 +13,8 @@
             <div class="col-lg-8 col-md-11">
               <div class="d-flex">
                 <div class="me-auto">
-                  <h1 class="display-1 font-weight-bold mt-n4 mb-0">umjiniti</h1>
-                  <h6 class="text-uppercase mb-0 ms-1">Network Management System</h6>
+                  <h1 class="display-1 font-weight-bold mt-n4 mb-0 text-white">umjiniti</h1>
+                  <h6 class="text-uppercase mb-0 ms-1 text-white">Network Management System</h6>
                 </div>
                 <div class="ms-auto">
                   <img class="w-50 float-end mt-lg-n4 rounded-circle img-fluid" src="{{ url_for('static', filename='img/bcl/umjiniti.png') }}" alt="umjiniti logo" />
@@ -33,7 +33,7 @@
                             </svg>
                           </div>
                         </div>
-                        <span class="mb-0 text-secondary font-weight-normal">Register</span>
+                        <span class="mb-0 text-white font-weight-normal">Register</span>
                       </a>
                       <hr class="horizontal dark">
                       <a class="d-flex" href="{{ url_for('login') }}">
@@ -45,7 +45,7 @@
                             </svg>
                           </div>
                         </div>
-                        <span class="mb-0 text-secondary font-weight-normal">Login</span>
+                        <span class="mb-0 text-white font-weight-normal">Login</span>
                       </a>
                       <hr class="horizontal dark">
                       <a class="d-flex" target="_blank" href="https://github.com/BCL-FOSS/umjiniti-core">
@@ -57,7 +57,7 @@
                           </div>
                           
                         </div>
-                        <span class="mb-0 text-secondary font-weight-normal">Github</span>
+                        <span class="mb-0 text-white font-weight-normal">Github</span>
                       </a>
                     </div>
                     <a href="javascript:;" class="bg-gray-100 w-100 text-center py-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Show More">
