--- a/agentapp/templates/app/base.html
+++ b/agentapp/templates/app/base.html
@@ -169,7 +169,7 @@
                 </g>
               </svg>
             </div>
-            <span class="text-white nav-link-text ms-1">Agent</span>
+            <span class="text-white nav-link-text ms-1">AI Assistant</span>
           </a>
         </li>
         <li class="nav-item">
@@ -189,7 +189,7 @@
                 </g>
               </svg>
             </div>
-            <span class="text-white nav-link-text ms-1">Network Visualization</span>
+            <span class="text-white nav-link-text ms-1">Network Map</span>
           </a>
         </li>
         <li class="nav-item mt-3">
@@ -263,21 +263,6 @@
 
       </ul>
     </div>
-    <div class="sidenav-footer mx-3 ">
-      <div class="card card-background shadow-none card-background-mask-secondary" id="sidenavCard">
-        <div class="full-background" style="background-image: url('/static/img/curved-images/white-curved.jpg')"></div>
-        <div class="card-body text-start p-3 w-100">
-          <div class="icon icon-shape icon-sm bg-white shadow text-center mb-3 d-flex align-items-center justify-content-center border-radius-md">
-            <i class="ni ni-diamond text-dark text-gradient text-lg top-0" aria-hidden="true" id="sidenavCardIcon"></i>
-          </div>
-          <div class="docs-info">
-            <h6 class="text-dark up mb-0"></h6>
-            <p class="text-xs font-weight-bold"></p>
-          </div>
-        </div>
-      </div>
-     
-    </div>
   </aside>
   <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg overflow-auto" style="height: 85vh;">
     <!-- Navbar -->
@@ -286,10 +271,6 @@
         
         <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
           <div class="ms-md-auto pe-md-3 d-flex align-items-center">
-            <div class="input-group">
-              <span class="input-group-text text-body"><i class="fas fa-search" aria-hidden="true"></i></span>
-              <input type="text" class="form-control" placeholder="Search Assets...">
-            </div>
           </div>
           <ul class="navbar-nav  justify-content-end">
             <li class="nav-item d-xl-none ps-3 d-flex align-items-center">
