--- a/agentapp/templates/index/index.html
+++ b/agentapp/templates/index/index.html
@@ -33,7 +33,7 @@
                             </svg>
                           </div>
                         </div>
-                        <span class="mb-0 text-white font-weight-normal">Register</span>
+                        <span class="mb-0 font-weight-normal">Register</span>
                       </a>
                       <hr class="horizontal dark">
                       <a class="d-flex" href="{{ url_for('login') }}">
@@ -45,7 +45,7 @@
                             </svg>
                           </div>
                         </div>
-                        <span class="mb-0 text-white font-weight-normal">Login</span>
+                        <span class="mb-0 font-weight-normal">Login</span>
                       </a>
                       <hr class="horizontal dark">
                       <a class="d-flex" target="_blank" href="https://github.com/BCL-FOSS/umjiniti-core">
@@ -57,7 +57,7 @@
                           </div>
                           
                         </div>
-                        <span class="mb-0 text-white font-weight-normal">Github</span>
+                        <span class="mb-0 font-weight-normal">Github</span>
                       </a>
                     </div>
                     <a href="javascript:;" class="bg-gray-100 w-100 text-center py-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Show More">
