--- a/agentapp/templates/app/base.html
+++ b/agentapp/templates/app/base.html
@@ -362,7 +362,8 @@
             </li>
             <li class="nav-item d-flex align-items-center">
               <a href="{{ url_for('logout', auth_id=auth_id) }}" class="nav-link text-body font-weight-bold px-0">
-                <i class="fa fa-user me-sm-1"></i>
+                <!--<i class="fa fa-user me-sm-1"></i>-->
+                <i class="fa-solid fa-right-from-bracket me-sm-1"></i>
                 <span class="d-sm-inline d-none">Sign Out</span>
               </a>
             </li>
